syntax = "proto3";

package com.amri.emploihunt.proto;
 // Replace with your package name

message Experience {
  string vDesignation = 1;
  string vCompanyName = 2;
  string vJobLocation = 3;
  int32 bIsCurrentCompany = 4;
  string vDuration = 5;
}

message ExperienceList {
  repeated Experience experiences = 1;
}